Allow per window variables Code cleanup